# sangsik-gdscript-graph

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gdscript_graph/: calls.py  cli.py  db.py  discovery.py  mcp_server.py  parse_cache.py  parsing.py  resolve.py  source_lookup.py  symbols.py  watch.py
tests/: conftest.py  helpers.py  test_chained_receivers.py  test_db_robustness.py  test_inheritance.py  test_local_types.py  test_mcp_server.py  test_parse_cache.py  test_parsing.py  test_property_accessors.py  test_resolve.py  test_scope.py  test_signals.py  test_symbols.py  test_watch.py
