[project]
name = "sangsik-gdscript-graph"
version = "0.1.0"
description = "GDScript function-level call graph indexer + MCP server"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "gdtoolkit>=4.3.0",
    "mcp>=1.0.0",
    "watchdog>=4.0.0",
]

[project.scripts]
gdscript-graph = "gdscript_graph.cli:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
